unpackaged/main/default/objects/Allocation_Logger__c/Allocation_Logger__c.object-meta.xml
<CustomObject>
    <description>PS-MC-SB-146 to manage allocation report</description>
    <label>Allocation Logger</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Allocation Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>