unpackaged/main/default/objects/Allocation_Logger__c/fields/Allocation_Changed__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Changed__c</fullName>
    <defaultValue>1</defaultValue>
    <description>It contains number of units that were modified or transferred in the process.</description>
    <label>Allocation Changed</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>