unpackaged/main/default/objects/Allocation_Logger__c/fields/Barrels_Used_in_Previous_Time_Interval__c.field-meta.xml
<CustomField>
    <fullName>Barrels_Used_in_Previous_Time_Interval__c</fullName>
    <description>PS-MC-SB-108 to maintain used barrel in previous record</description>
    <label>Barrels Used in Previous Time Interval</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>