unpackaged/main/default/objects/Allocation_Logger__c/fields/Brand_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand Allocation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This brand allocation record is inactive. Please try with different record.</errorMessage>
        <filterItems>
            <field>Brand_Allocation__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Brand_Allocation__c</referenceTo>
    <relationshipLabel>Allocation Loggers</relationshipLabel>
    <relationshipName>Allocation_Loggers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>