unpackaged/main/default/objects/Allocation_Logger__c/fields/From_Leaf_Node_New_Allocation__c.field-meta.xml
<CustomField>
    <fullName>From_Leaf_Node_New_Allocation__c</fullName>
    <formula>From_Original_Allocation__c - Allocation_Changed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Leaf Node New Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>