unpackaged/main/default/objects/Allocation_Logger__c/fields/To_Region_Allocation__c.field-meta.xml
<CustomField>
    <fullName>To_Region_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the region allocation to which transfer will happen.</description>
    <label>To Region Allocation</label>
    <referenceTo>Brand_Country_Region_Allocation__c</referenceTo>
    <relationshipLabel>Allocation Loggers (To Region Allocation)</relationshipLabel>
    <relationshipName>Allocation_Loggers1</relationshipName>
    <type>Lookup</type>
</CustomField>