unpackaged/main/default/objects/Allocation_Logger__c/fields/To_State_Allocation__c.field-meta.xml
<CustomField>
    <fullName>To_State_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the state allocation on which transfer will happen.</description>
    <label>To State Allocation</label>
    <referenceTo>Brand_Country_Region_State_Allocation__c</referenceTo>
    <relationshipLabel>Allocation Loggers (To State Allocation)</relationshipLabel>
    <relationshipName>Allocation_Loggers1</relationshipName>
    <type>Lookup</type>
</CustomField>