unpackaged/main/default/objects/Allocation_Logger__c/fields/Transfer_Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Modification_Reason__c</fullName>
    <description>It contains the region why an allocation being modified or transferred from one place to another.</description>
    <label>Transfer/Modification Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>